--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ disqusShortname = "Tobias Ertel"
   copyright = "© Tobias Ertel. All rights reserved."
   design = "Design by Tobias Ertel"
   mainSections = ["blog"]
-  custom_js = ["js/custom.js"]
+  custom_js = ["js/sketch.js"]
 
 
 
