--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,17 +26,18 @@ features:
     - items:
         - title: "About Tobias Ertel"
           accent: "accent1" #accent values are 1-8
-          content: "In my work as a designer, <br /> I strive to shape the world we want to live in - one that is also sustainable, one that works with us and for us. I like to rethink processes that are unsustainable or don‘t make sense for us humans. There is always a better way, and I have made it my mission to look for it. 
+          content: "In my work as a designer, I strive to shape the world we want to live in - one that is also sustainable, one that works with us and for us. I like to rethink processes that are unsustainable or don‘t make sense for us humans. There is always a better way, and I have made it my mission to look for it. 
           In the future, I would like to work for people and with people, while not losing sight of design creation. It is all about people, rather than technology. I am curious about interactive objects - both digital and physical -"
           
 
-        - title: "Get in Contact"
+        - title: "Vita"
           icon: "fa-info"
           icon2: "fa-twitter"
           accent: "accent3" #accent values are 1-8
-          content: "Follow me on GitHub <br />
-                    Follow me on twitter <br />
-                    My Photography thumbler"
+          content: "- Born in 1990 <br />
+                    - Trained as photographer by Mierswa-Kluska Munic <br />
+                    - Worked as a commercial Photographer several Year untill Corona<br />
+                    - Studies Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a>"
                     
     # - items:
     #     - title: "Sed feugiat"
