--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -37,7 +37,7 @@ features:
           content: "2011 &ndash; 2013: Trained as photographer by Mierswa-Kluska Munic <br />
                     2013 &ndash; 2014: Traveling on the countryway to India<br />
                     2015 &ndash; 2019: Worked as a freelance Photographer<br />
-                    since 2020: Studying Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a>"
+                    since &nbsp; 2020: Studying Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a>"
                     
     # - items:
     #     - title: "Sed feugiat"
