--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,7 +26,7 @@ features:
     - items:
         - title: "About Tobias Ertel"
           accent: "accent1" #accent values are 1-8
-          content: "I am a interdisciplinary IxD design student and photographer. In my work as a designer, I strive to shape the world we want to live in - one that is also sustainable, one that works with us and for us. I like to rethink processes that are unsustainable or don‘t make sense for us humans. There is always a better way, and I have made it my mission to look for it. 
+          content: "I am a interdisciplinary IxD design student and photographer. In my work as a designer, I am eager to shape the world we want to live in - one that is also sustainable, one that works with us and for us. I like to rethink processes that are unsustainable or don‘t make sense for us humans. There is always a better way, and I have made it my mission to look for it. 
           In the future, I would like to work for people and with people, while not losing sight of design creation. It is all about people, rather than technology. I am curious about interactive objects - both digital and physical -
 
 <style type='text/css'>
