--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,7 +26,7 @@ features:
     - items:
         - title: "About Tobias Ertel"
           accent: "accent1" #accent values are 1-8
-          content: "In my work as a designer, I am eager to shape the world we want to live in - one that is sustainable, one that works with human beings as inhabitants and for us, e.g. by means of artifical intelligence. I like to rethink processes that are unsustainable or don’t make sense for us humans. There is always a better way and my mission is to find it.
+          content: " I am eager to shape the world we want to live in - one that works, with human beings as its inhabitants, and one that works for us, e.g. by means of AI/artificial intelligence. I like to rethink processes that are unsustainable or don’t make sense for us humans. There is always a better way and my mission is to find it.
 
 <style type='text/css'>
 .tg  {border-collapse:collapse;border-spacing:0; width: 400px;}
@@ -64,7 +64,7 @@ features:
                     2015 &ndash; 2019: Worked as a freelance Photographer<br />
                     since &nbsp; 2020: Studying Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a><br /><br />
                     
-                    Download <a href='https://drive.google.com/file/d/1wFZfzKL1u10J1T-VwQdpltSC8rxGQSzi/view?usp=sharing' target='_blank'>CV</a> & <a href='https://www.hfg-gmuend.de/' target='_blank'>Portfolio</a>"
+                    Download <a href='https://drive.google.com/file/d/1A9oBYulJQ3e3P_EwhhKFV6UIs9cNDOnG/view?usp=sharing' target='_blank'>CV</a> & <a href='https://www.hfg-gmuend.de/' target='_blank'>Portfolio</a>"
     # - items:      
    
     #     - title: "Sed feugiat"
