--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,7 +26,8 @@ features:
     - items:
         - title: "About Tobias Ertel"
           accent: "accent1" #accent values are 1-8
-          content: " I am eager to shape the world we want to live in - one that works, with human beings as its inhabitants, and one that works for us, e.g. by means of AI/artificial intelligence. I like to rethink processes that are unsustainable or don’t make sense for us humans. There is always a better way and my mission is to find it.
+          content: " I am an interdisciplinary Interaction Design student and photographer from south Germany. In the future, I would like to work with people for the common good, while not losing sight of design. Working with human-machine interfaces is more than designing websites and apps for me. I am curious about interactive objects - both digital and physical. 
+
 
 <style type='text/css'>
 .tg  {border-collapse:collapse;border-spacing:0; width: 400px;}
