--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -65,7 +65,7 @@ features:
                     2015 &ndash; 2019: Worked as a freelance Photographer<br />
                     since &nbsp; 2020: Studying Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a><br /><br />
                     
-                    Download <a href='https://drive.google.com/file/d/1A9oBYulJQ3e3P_EwhhKFV6UIs9cNDOnG/view?usp=sharing' target='_blank'>CV</a> & <a href='https://www.hfg-gmuend.de/' target='_blank'>Portfolio</a>"
+                    Download <a href='https://drive.google.com/file/d/1A9oBYulJQ3e3P_EwhhKFV6UIs9cNDOnG/view?usp=sharing' target='_blank'>CV</a>"
     # - items:      
    
     #     - title: "Sed feugiat"
