--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -62,7 +62,8 @@ features:
           accent: "accent3" #accent values are 1-8
           content: "2011 &ndash; 2013: Trained as photographer by Mierswa-Kluska Munic <br />
                     2013 &ndash; 2014: Traveling on the countryway to India<br />
-                    2015 &ndash; 2019: Worked as a freelance Photographer<br />
+                    2015 &ndash; 2019: Working as a freelance advertising photographer
+<br />
                     since &nbsp; 2020: Studying Interaction Design <a href='https://www.hfg-gmuend.de/' target='_blank'>@HfG Schwäbisch Gmünd</a><br /><br />
                     
                     Download <a href='https://drive.google.com/file/d/1A9oBYulJQ3e3P_EwhhKFV6UIs9cNDOnG/view?usp=sharing' target='_blank'>CV</a>"
